# LambdaMART

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_all_experiments.py  run_all_experiments_with_logs.py  run_experiments.py
configs/: config.yaml  config_ips.yaml  config_lightgbm.yaml
notebooks/: example_usage.ipynb
scripts/: README.md  create_folds_interactive.py  create_stratified_folds.py
src/: data_loader.py  evaluator.py  mlflow_utils.py  model.py  model_factory.py  model_lightgbm.py  model_xgboost.py
