[tool.poetry]
name = "lambdamart"
version = "0.1.0"
description = "Pipeline modular para treinamento de modelos LambdaMART com suporte a múltiplos frameworks, IPS e hyperparameter tuning."
authors = []
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
xgboost = ">=1.7.0"
lightgbm = ">=3.0.0"
numpy = ">=1.21.0"
pandas = ">=1.3.0"
scikit-learn = ">=1.0.0"
mlflow = ">=2.0.0"
pyyaml = ">=6.0"
matplotlib = ">=3.5.0"
seaborn = ">=0.11.0"
jupyter = ">=1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
